# eip-docs-agent

./: .gitignore  README.md  main.py  pyproject.toml
app/: app.py  ingest.py  logs.py  pyproject.toml  search_agent.py  search_tools.py
app/logs/: eip_agent_v1_20260114_045236_d84faa.json
logs/: eip_agent_v1_20260112_040047_2e0335.json
